--- a/RESTFul API/package.json
+++ b/RESTFul API/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.2",
     "nodemon": "^3.1.4",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "xlsx": "^0.18.5"
   }
 }
